# Jaguar

./: .gitignore  CMakeLists.txt  README.md  dev.txt  example.cs  example.ja  main.cpp  output.bc  output.ll
installer/: inno_jaguar_installer.iss
ressources/: icon.rc
src/: api.h  types.h
src/JIT/: jit.cpp  jit.h
src/filesystem/: filesystem.cpp  filesystem.h
src/lexer/: lexer.cpp  lexer.h
src/llvm/: mng.cpp  mng.h
src/logger/: compile_time_logger.cpp  compile_time_logger.h  errors.h
src/parser/: ast_node.h  driver.h  jaguar.y  parser.cpp  parser.h  var_decl_node.cpp  var_decl_node.h
src/parser/nodes/: ast_node.h  binary_op.h  expression.h  expressions.cpp  int_literal.h  statement.h  statement_list.cpp  statement_list.h  statements.cpp  string_literal.h  var_assign.h  var_decl.cpp  var_decl.h  var_ref.h
src/parser/nodes/blocks/: block_statement.h  func_decl.h  if_statement.h
src/parser/nodes/expressions/: binary_op.h  expression.h  var_ref.h
src/parser/nodes/expressions/literal/: bool_literal.h  float_literal.h  int_literal.h  string_literal.h
src/parser/nodes/statements/: func_call.h  statement.h  statement_list.cpp  statement_list.h  var_assign.h  var_decl.cpp  var_decl.h
